# RedirectService

./: .env.example  .ruff.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/: urls.py
apps/redirect/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/redirect/management/commands/: create_admin_user.py
apps/redirect/migrations/: 0001_initial.py
apps/redirect/tests/: factories.py  test_auth_user.py  test_crud_redirect_rule.py  test_get_redirect.py
config/: settings.py
